<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/new_game_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="@string/new_game"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/four_player_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50px"
            android:text="@string/four_players"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/five_player_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50px"
            android:text="@string/five_players"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/six_player_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50px"
            android:text="@string/six_players"
            android:textAlignment="center"
            android:textSize="24sp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>