<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="493dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/player_creation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="TextView"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25px"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/player_name" />

        <Spinner
            android:id="@+id/family_choices"
            android:layout_marginTop="10px"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/taste_choices"
            android:layout_marginTop="10px"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/affinity_choices"
            android:layout_marginTop="10px"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/aspiration_choices"
            android:layout_marginTop="10px"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/secrets_choices"
            android:layout_marginTop="10px"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="@string/next" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>