<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="493dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/family_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/taste_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/affinity_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/aspiration_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/secret_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="TextView"
            android:textSize="20sp" />


        <Button
            android:id="@+id/end_player_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="@string/next" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>